--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,68 +6,89 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>800</width>
-    <height>600</height>
+    <width>548</width>
+    <height>425</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Flow GUI</string>
   </property>
+  <property name="windowIcon">
+   <iconset resource="images.qrc">
+    <normaloff>:/images/process.png</normaloff>:/images/process.png</iconset>
+  </property>
+  <property name="dockOptions">
+   <set>QMainWindow::AllowTabbedDocks|QMainWindow::AnimatedDocks</set>
+  </property>
   <widget class="QWidget" name="cw"/>
-  <widget class="QMenuBar" name="menubar">
-   <property name="geometry">
-    <rect>
-     <x>0</x>
-     <y>0</y>
-     <width>800</width>
-     <height>28</height>
-    </rect>
-   </property>
-   <widget class="QMenu" name="menuFile">
-    <property name="title">
-     <string>File</string>
-    </property>
-    <addaction name="actionExit"/>
-   </widget>
-   <widget class="QMenu" name="menuExcute">
-    <property name="title">
-     <string>Run</string>
-    </property>
-    <addaction name="actionExcute"/>
-   </widget>
-   <widget class="QMenu" name="menuTest">
-    <property name="title">
-     <string>Test</string>
-    </property>
-    <addaction name="actionExpand"/>
-    <addaction name="actionMini"/>
-   </widget>
-   <addaction name="menuFile"/>
-   <addaction name="menuExcute"/>
-   <addaction name="menuTest"/>
-  </widget>
   <widget class="QStatusBar" name="statusbar"/>
+  <widget class="QToolBar" name="toolBar">
+   <property name="windowTitle">
+    <string>toolBar</string>
+   </property>
+   <property name="movable">
+    <bool>false</bool>
+   </property>
+   <property name="allowedAreas">
+    <set>Qt::TopToolBarArea</set>
+   </property>
+   <property name="iconSize">
+    <size>
+     <width>30</width>
+     <height>30</height>
+    </size>
+   </property>
+   <property name="toolButtonStyle">
+    <enum>Qt::ToolButtonTextUnderIcon</enum>
+   </property>
+   <property name="floatable">
+    <bool>true</bool>
+   </property>
+   <attribute name="toolBarArea">
+    <enum>TopToolBarArea</enum>
+   </attribute>
+   <attribute name="toolBarBreak">
+    <bool>false</bool>
+   </attribute>
+   <addaction name="actionExcute"/>
+   <addaction name="actionExit"/>
+  </widget>
   <action name="actionExit">
+   <property name="icon">
+    <iconset resource="images.qrc">
+     <normaloff>:/images/gtk-cancel.png</normaloff>:/images/gtk-cancel.png</iconset>
+   </property>
    <property name="text">
     <string>Exit</string>
    </property>
   </action>
   <action name="actionExcute">
+   <property name="icon">
+    <iconset resource="images.qrc">
+     <normaloff>:/images/media-playback-start.png</normaloff>:/images/media-playback-start.png</iconset>
+   </property>
    <property name="text">
     <string>Excute</string>
    </property>
   </action>
-  <action name="actionExpand">
+  <action name="actionMenu1">
    <property name="text">
-    <string>Expand</string>
+    <string>Menu1</string>
    </property>
   </action>
-  <action name="actionMini">
+  <action name="actionLoad">
    <property name="text">
-    <string>Mini</string>
+    <string>Load</string>
+   </property>
+  </action>
+  <action name="actionNew">
+   <property name="text">
+    <string>New</string>
    </property>
   </action>
  </widget>
- <resources/>
+ <resources>
+  <include location="images.qrc"/>
+ </resources>
  <connections/>
 </ui>
