--- a/images.qrc
+++ b/images.qrc
@@ -29,5 +29,8 @@
         <file>images/loginBg.png</file>
         <file>images/window.png</file>
         <file>images/onoff.png</file>
+        <file>images/error.png</file>
+        <file>images/retina-failed.png</file>
+        <file>images/success.png</file>
     </qresource>
 </RCC>
